--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,14 @@ lib_extra_dirs = ~/Documents/Arduino/libraries
 board_build.filesystem = littlefs
 board_build.ldscript = eagle.flash.4m3m.ld
 lib_deps = adafruit/Adafruit BME280 Library@^2.1.2
+
+[env:esp32doit-devkit-v1]
+platform = espressif32
+board = esp32doit-devkit-v1
+framework = arduino
+lib_extra_dirs = ~/Documents/Arduino/libraries
+lib_deps = 
+	adafruit/RTClib@^1.12.0
+	painlessmesh/painlessMesh@^1.4.6
+	ottowinter/ESPAsyncWebServer-esphome@^1.2.7
+	knolleary/PubSubClient@^2.8
